// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sends a collapsed payload 1`] = `
[
  {
    "meta": [],
    "payloads": [
      {
        "content": {
          "values": [
            "test data",
          ],
        },
        "origin": {
          "file": "/src/commands/Send.ts",
          "function_name": "xxxx",
          "hostname": "fake-host",
          "line_number": 999,
        },
        "type": "log",
      },
    ],
    "uuid": "fakeUuid",
  },
  {
    "meta": [],
    "payloads": [
      {
        "content": {},
        "origin": {
          "file": "/src/commands/Send.ts",
          "function_name": "xxxx",
          "hostname": "fake-host",
          "line_number": 999,
        },
        "type": "hide",
      },
    ],
    "uuid": "fakeUuid",
  },
  {
    "meta": [],
    "payloads": [
      {
        "content": {},
        "origin": {
          "file": "/src/commands/Command.ts",
          "function_name": "xxxx",
          "hostname": "fake-host",
          "line_number": 999,
        },
        "type": "hide",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends a payload 1`] = `
[
  {
    "meta": [],
    "payloads": [
      {
        "content": {
          "values": [
            "test data",
          ],
        },
        "origin": {
          "file": "/src/commands/Send.ts",
          "function_name": "xxxx",
          "hostname": "fake-host",
          "line_number": 999,
        },
        "type": "log",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends a payload with color 1`] = `
[
  {
    "meta": [],
    "payloads": [
      {
        "content": {
          "values": [
            "test data",
          ],
        },
        "origin": {
          "file": "/src/commands/Send.ts",
          "function_name": "xxxx",
          "hostname": "fake-host",
          "line_number": 999,
        },
        "type": "log",
      },
    ],
    "uuid": "fakeUuid",
  },
  {
    "meta": [],
    "payloads": [
      {
        "content": {
          "color": "red",
        },
        "origin": {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-host",
          "line_number": 999,
        },
        "type": "color",
      },
    ],
    "uuid": "fakeUuid",
  },
  {
    "meta": [],
    "payloads": [
      {
        "content": {
          "color": "red",
        },
        "origin": {
          "file": "/tests/Ray.test.ts",
          "function_name": "xxxx",
          "hostname": "fake-host",
          "line_number": 999,
        },
        "type": "color",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;
